# raytracing

./: Cargo.toml  preview.sh
src/: camera.rs  interval.rs  lib.rs  main.rs  ray.rs
src/hittable/: list.rs  mod.rs  sphere.rs
