[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
color = "0.3.2"
glam = "0.32.1"
image = "0.25.10"
indicatif = "0.18.4"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
